<resources>
    <string name="app_name">KibrisorderMobileAppGeneric</string>
    <string name="MyCoupon">My Coupons</string>
    <string name="SellerCoupon">Seller Coupons</string>
    <string name="NoCoupon">No Coupon Available</string>
    <string name="payment_thanks">Your payment has been accepted!\n Amount received : $100 </string>
    <string name="order">Order List</string>
    <string name="home">Home</string>
    <string name="Recommended">Recommended Products</string>
    <string name="FavoriteStores">Favorite Stores</string>
    <string name="WishlistEmpty">Wishlist is Empty</string>
    <string name="FavoriteItems">Favorite Items</string>
    <string name="ProductName">Product Name</string>
    <string name="Price">Price</string>
    <string name="Supplier">Supplier\'s Name</string>
    <string name="Products">Products</string>
    <string name="Feedbacks">Feedbacks</string>
    <string name="title_activity_empty_notif">EmptyNotifActivity</string>
    <string name="settings">Settings</string>
    <string name="NoNotif">No Notification(s) received</string>


</resources>
