<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".EmptyWishlistActivity">

    <Button
        android:id="@+id/item"
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="460dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/FavoriteItems"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/store"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="460dp"
        android:background="@drawable/btn_border"
        android:fadingEdge="horizontal|vertical"
        android:text="@string/FavoriteStores"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="265dp"
        android:layout_height="59dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/WishlistEmpty"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:fontFamily="sans-serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.796"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item"
        app:layout_constraintVertical_bias="0.49" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="113dp"
        android:layout_height="70dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/wish"
        tools:ignore="contentDescription" />

</android.support.constraint.ConstraintLayout>